--- a/mlabs/mlabs-plutus-use-cases.cabal
+++ b/mlabs/mlabs-plutus-use-cases.cabal
@@ -274,6 +274,7 @@ test-suite mlabs-plutus-use-cases-tests
     , plutus-tx
     , plutus-tx-plugin
     , plutus-tx-spooky
+    , plutus-simple-model
     , plutus-use-cases
     , pretty-show
     , prettyprinter
