--- a/mlabs/mlabs-plutus-use-cases.cabal
+++ b/mlabs/mlabs-plutus-use-cases.cabal
@@ -125,6 +125,7 @@ library
     Mlabs.EfficientNFT.Contract.Mint
     Mlabs.EfficientNFT.Contract.SetPrice
     Mlabs.EfficientNFT.Marketplace
+    Mlabs.EfficientNFT.Dao
     Mlabs.EfficientNFT.Token
     Mlabs.EfficientNFT.Types
     Mlabs.Emulator.App
