--- a/mlabs/mlabs-plutus-use-cases.cabal
+++ b/mlabs/mlabs-plutus-use-cases.cabal
@@ -298,6 +298,9 @@ test-suite mlabs-plutus-use-cases-tests
     Test.EfficientNFT.Script.TokenMint
     Test.EfficientNFT.Script.TokenUnstake
     Test.EfficientNFT.Script.TokenRestake
+    Test.EfficientNFT.Script.TokenMarketplaceSetPrice
+    Test.EfficientNFT.Script.TokenMarketplaceBuy
+    Test.EfficientNFT.Script.TokenMarketplaceRedeem
     Test.EfficientNFT.Script.Values
     Test.EfficientNFT.Size
     Test.EfficientNFT.Trace
