--- a/mlabs/mlabs-plutus-use-cases.cabal
+++ b/mlabs/mlabs-plutus-use-cases.cabal
@@ -125,6 +125,7 @@ library
     Mlabs.EfficientNFT.Contract.MarketplaceSetPrice
     Mlabs.EfficientNFT.Contract.Mint
     Mlabs.EfficientNFT.Contract.SetPrice
+    Mlabs.EfficientNFT.Contract.FeeWithdraw
     Mlabs.EfficientNFT.Marketplace
     Mlabs.EfficientNFT.Dao
     Mlabs.EfficientNFT.Token
@@ -304,6 +305,7 @@ test-suite mlabs-plutus-use-cases-tests
     Test.EfficientNFT.Script.TokenMarketplaceSetPrice
     Test.EfficientNFT.Script.TokenMarketplaceBuy
     Test.EfficientNFT.Script.TokenMarketplaceRedeem
+    Test.EfficientNFT.Script.FeeWithdraw
     Test.EfficientNFT.Script.Values
     Test.EfficientNFT.Size
     Test.EfficientNFT.Trace
